[package]
name = "fgrok"
version = "1.1.0" # remember to update html_root_url
authors = ["magodo <wztdyl@sina.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/magodo/grok"
documentation = "https://docs.rs/fgrok"
homepage = "https://github.com/magodo/grok"
description = """
A rust implementation of the popular java & ruby grok library
which allows easy text and log file processing with composable 
patterns.

(forked from https://github.com/daschl/grok)
"""
categories = ["text-processing"]
build = "build.rs"

[badges]
travis-ci = { repository = "daschl/grok" }
appveyor = { repository = "daschl/grok" }

[dependencies]
onig = "5.0"

[build-dependencies]
glob = "0.3"
